--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -132,7 +132,7 @@ jobs:
               with:
                   name: result
                   path: |
-                      ./artifacts
+                      ./artifacts/$NAME-$TARGET-$TAG.tar.gz
 
     # deploys to github releases on tag
     deploy:
@@ -151,6 +151,6 @@ jobs:
               run: find ./artifacts
 
             - name: Release
-              uses: softprops/action-gh-release@v1
+              uses: softprops/action-gh-release@v2
               with:
                   files: ./artifacts/*.tar.gz
